# TiffinTime

./: .gitignore  package-lock.json  package.json
frontend/: jest.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  setupTests.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx  theme.css
frontend/app/about/: page.tsx
frontend/app/auth/: page.tsx
frontend/app/cart/: page.tsx
frontend/app/context/: CartContext.tsx
frontend/app/food/: page.tsx
frontend/app/hooks/: allmenu.ts  getUserDetails.ts  getUserSubscription.ts  getVendorDetails.ts  singleVendor.ts  useOrder.ts  useOrderState.test.tsx  useOrderState.ts  useReviewSubmission.ts  useSubscribers.ts  useUserDetails.ts  useVendorMenu(ImageWhileCreatingMenu).ts  useVendorMenu.ts  useVendorRating.ts  useVendorReviews.ts  useVendorSpecials.ts  useVendorSubscription.ts  useVendorWeeklyMenu.ts  useVendors.ts  vendorMenu.ts  (+1 more)
frontend/components/: navigation.tsx
src/: README.md  main.py  pyproject.toml  pytest.ini
src/app/: enums.py  schemas.py  security.py  settings.py  test.py
src/app/repositories/: auth.py  date_specials.py  menu.py  order.py  payment.py  ratings.py  reviews.py  subscription.py  user.py  user_details.py  vendors.py  weekly_menu.py
src/app/routers/: auth.py  date_specials.py  menu.py  order.py  payment.py  ratings.py  reviews.py  subscription.py  upload.py  user_details.py  vendors.py  weekly_menu.py
src/db/: supabase.py
src/tests/: test_order_router.py  test_payment_router.py
src/utils/: auth.py  email.py  logger.py  token.py
(+18 files in other folders)
