[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "colorlog>=6.9.0",
    "fastapi[standard]>=0.115.13",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "ruff>=0.12.0",
    "sslcommerz-lib>=1.0",
    "supabase>=2.16.0",
]
